--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,6 +40,7 @@
 	<script src="js/NoMigrationExpectationEdit.js"></script>
 	<script src="js/NotSameHostExpectationEdit.js"></script>
 	<script src="js/StorageRedundancyMigrationExpectationEdit.js"></script>
+	<script src="js/HostChassisManufacturerExpectationEdit.js"></script>
 	<link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="webjars/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet"/>
 	<link href="css/kerub.css" rel="stylesheet"/>
@@ -290,6 +291,36 @@
 		</div>
 	</div>
 
+</script>
+
+<script type="text/ng-template" id="host-chassis-manufacturer-edit-template">
+	<div class="media" ng-controller="HostChassisManufacturerExpectationEdit" ng-init="init(vm)">
+		<div class="media-left">
+			<span class="fa fa-industry expectation-big-icon"></span>
+		</div>
+		<div class="media-body">
+			<div class="caption">
+				<p>
+				<div class="input-group">
+					<div class="input-group-addon"><span class="fa fa-industry"></span></div>
+					<input class="form-control input-lg"
+					       placeholder="manufacturer"
+					       uib-typeahead="result as result for result in listManufacturers($viewValue) | filter:$viewValue"
+					       typeahead-editable="true"
+					       typeahead-min-length="2"
+					       typeahead-wait-ms="200"
+					       typeahead-on-select="selectManufacturer()"
+					       ng-model="manufacturer"
+					       autofocus
+					       autocomplete="off">
+
+				</div>
+
+				<span ng-include="'expectation-edit-template-buttons'"></span>
+
+			</div>
+		</div>
+	</div>
 </script>
 
 <script type="text/ng-template" id="storage-redundancy-edit-template">
