settings page - save does not work yet
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
 	<script src="webjars/sockjs-client/0.3.4/sockjs.min.js"></script>
 	<script src="webjars/markdown-js/0.5.0/markdown.js"></script>
 	<script src="webjars/nervgh-angular-file-upload/2.1.1/angular-file-upload.min.js"></script>
+	<script src="webjars/angular-bootstrap-toggle-switch/0.5.6/angular-toggle-switch.min.js"></script>
 	<script src="js/utils.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/socket.js"></script>
@@ -43,8 +44,10 @@
 	<script src="js/HostChassisManufacturerExpectationEdit.js"></script>
 	<script src="js/CpuClockFreqExpectationEdit.js"></script>
 	<script src="js/CacheSizeExpectationEdit.js"></script>
+	<script src="js/Settings.js"></script>
 	<link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="webjars/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet"/>
+	<link href="webjars/angular-bootstrap-toggle-switch/0.5.6/style/bootstrap3/angular-toggle-switch-bootstrap-3.css" rel="stylesheet"/>
 	<link href="css/kerub.css" rel="stylesheet"/>
 	<link rel="icon" href="img/kerub.ico" type="image/png"/>
 </head>
