--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -215,6 +215,30 @@
 			   <ul uib-pagination items-per-page="itemsPerPage" total-items="hosts.total" ng-model="currentPage" ng-change="refresh()" previous-text="&laquo;" next-text="&raquo;"></ul>
 			</span>
 		</uib-tab>
+		<uib-tab ng-if="isAdmin()">
+			<uib-tab-heading>
+				<i class="fa fa-balance-scale"></i> Status
+			</uib-tab-heading>
+		</uib-tab>
+		<uib-tab ng-if="isAdmin()">
+			<uib-tab-heading>
+				<i class="fa fa-sliders"></i> Settings
+			</uib-tab-heading>
+			<div ng-controller="Settings">
+				<table class="table table-striped table-hover">
+					<tbody>
+						<tr>
+							<td><span class="fa fa-briefcase"></span> Accounts required</td>
+							<td><toggle-switch ng-model="config.accountsRequired"></toggle-switch></td>
+						</tr>
+						<tr>
+							<td><span class="fa fa-plug"></span> Power management enabled</td>
+							<td><toggle-switch ng-model="blah"></toggle-switch></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</uib-tab>
 		<uib-tab>
 			<uib-tab-heading>
 				<i class="glyphicon glyphicon-info-sign"></i> About
@@ -226,11 +250,6 @@
 				<span>version: {{versionInfo.version}}</span><br>
 				<span><a href="apidoc/">api documentation</a></span><br>
 			</div>
-		</uib-tab>
-		<uib-tab>
-			<uib-tab-heading>
-				<i class="fa fa-balance-scale"></i> Status
-			</uib-tab-heading>
 		</uib-tab>
 		<uib-tab-heading ng-controller="SearchController">
 			<div class="input-group">
