buttons to save and reload the configuration
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -236,6 +236,8 @@
 							<td><toggle-switch ng-model="blah"></toggle-switch></td>
 						</tr>
 					</tbody>
+					<button type="button" class="btn btn-default fa fa-check" ng-click="save()" uib-tooltip="Save configuration" tooltip-placement="right"></button>
+					<button type="button" class="btn btn-default fa fa-refresh" ng-click="refresh()" uib-tooltip="Save configuration" tooltip-placement="right"></button>
 				</table>
 			</div>
 		</uib-tab>
