--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -225,6 +225,8 @@
 				<i class="fa fa-sliders"></i> Settings
 			</uib-tab-heading>
 			<div ng-controller="Settings">
+				<button type="button" class="btn btn-default fa fa-check" ng-click="save()" uib-tooltip="Save configuration" tooltip-placement="right"></button>
+				<button type="button" class="btn btn-default fa fa-refresh" ng-click="refresh()" uib-tooltip="Reload configuration" tooltip-placement="right"></button>
 				<table class="table table-striped table-hover">
 					<tbody>
 						<tr>
@@ -236,8 +238,28 @@
 							<td><toggle-switch ng-model="blah"></toggle-switch></td>
 						</tr>
 					</tbody>
-					<button type="button" class="btn btn-default fa fa-check" ng-click="save()" uib-tooltip="Save configuration" tooltip-placement="right"></button>
-					<button type="button" class="btn btn-default fa fa-refresh" ng-click="refresh()" uib-tooltip="Save configuration" tooltip-placement="right"></button>
+				</table>
+			</div>
+		</uib-tab>
+		<uib-tab ng-if="isAdmin()">
+			<uib-tab-heading>
+				<i class="fa fa-users"></i> Groups
+			</uib-tab-heading>
+			<div ng-controller="AccountsAdmin">
+				<button type="button" class="btn btn-default fa fa-credit-card" ng-click="openNewAccountDialog()" uib-tooltip="Create new account"></button>
+				<button type="button" class="btn btn-default fa fa-code" ng-click="openNewProjectDialog()" uib-tooltip="Create new project"></button>
+				<table class="table table-striped table-hover">
+					<tbody>
+						<tr ng-repeat="account in accounts.result">
+							<td>
+								<span class="fa fa-tag"></span> {{account.name}}
+								<span ng-class="{false:'label label-info fa fa-unlock', true:'label label-primary fa fa-lock'}[account.requireProjects]"
+									uib-tooltip="projects are required/optional">
+									<span class="fa fa-code"></span>
+								</span>
+							</td>
+						</tr>
+					</tbody>
 				</table>
 			</div>
 		</uib-tab>
