--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -35,6 +35,14 @@
 							</div>
 						</td>
 						<td>
+								<span ng-repeat="storageLink in _vm.virtualStorageLinks">
+									<span ng-controller="StorageLink" ng-init="init(storageLink.virtualStorageId)">
+										<span ng-if="loading" class="fa fa-refresh fa-spin"></span>
+										<span ng-if="!loading" class="label label-info fa fa-database">
+											{{shortName(virtualStorage.name, 12)}}
+										</span>
+									</span>
+								</span>
 								<span ng-repeat="expectation in _vm.expectations"
 									  ng-controller="ExpectationMini"
 									  ng-init="init(expectation)">
@@ -124,8 +132,7 @@
 					<thead>
 					<tr>
 						<td>name</td>
-						<td>size</td>
-						<td>readonly</td>
+						<td>info</td>
 						<td>expectations</td>
 					</tr>
 					</thead>
@@ -135,10 +142,14 @@
 								{{virtDisk.name}}
 							</td>
 							<td>
-								{{humanFriendlySize(virtDisk.size)}}
-							</td>
-							<td>
-								{{virtDisk.readOnly}}
+								<span class="label label-primary">{{humanFriendlySize(virtDisk.size)}}</span>
+								<span ng-if="virtDisk.readOnly" class="label label-info fa fa-eye"></span>
+								<span ng-controller="AttachedVms" ng-init="init(virtDisk.id)">
+									<span ng-if="loading" class="fa fa-refresh fa-spin"></span>
+									<span ng-if="!loading" ng-repeat="vm in vms">
+										<span class="label label-info fa fa-cube"> {{shortName(vm.name, 9)}} </span>
+									</span>
+								</span>
 							</td>
 							<td>
 								<span ng-repeat="expectation in virtDisk.expectations"
