--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,6 +48,8 @@
 	<script src="js/CacheSizeExpectationEdit.js"></script>
 	<script src="js/Settings.js"></script>
 	<script src="js/AccountsAdmin.js"></script>
+	<script src="js/AttachedVms.js"></script>
+	<script src="js/StorageLink.js"></script>
 	<link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="webjars/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet"/>
 	<link href="webjars/angular-bootstrap-toggle-switch/0.5.6/style/bootstrap3/angular-toggle-switch-bootstrap-3.css" rel="stylesheet"/>
