--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,6 +20,7 @@
 	<script src="js/Login.js"></script>
 	<script src="js/HostTab.js"></script>
 	<script src="js/VmTab.js"></script>
+	<script src="js/StatusTab.js"></script>
 	<script src="js/BusType.js"></script>
 	<script src="js/VirtualStorageLink.js"></script>
 	<script src="js/VirtualDisksTab.js"></script>
