--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -233,7 +233,7 @@
 			<div ng-controller="StatusTab" ng-init="refresh()">
 				<div class="panel panel-default">
 					<div class="panel-heading"><span class="fa fa-balance-scale"></span> Overview
-						<button class="btn btn-success fa fa-refresh"
+						<button class="btn btn-success pull-right fa fa-refresh"
 						        ng-click="refresh()"></button>
 					</div>
 					<div class="panel-body">
