--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,6 +48,7 @@
 	<script src="js/HostChassisManufacturerExpectationEdit.js"></script>
 	<script src="js/CpuClockFreqExpectationEdit.js"></script>
 	<script src="js/CacheSizeExpectationEdit.js"></script>
+	<script src="js/CacheStatistics.js"></script>
 	<script src="js/Settings.js"></script>
 	<script src="js/AccountsAdmin.js"></script>
 	<script src="js/AttachedVms.js"></script>
