an icon for the login dialog
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,7 +68,7 @@
 <div ng-controller="Login">
 	<script type="text/ng-template" id="Login.html">
 		<div class="modal-header">
-			<h3 class="modal-title">Login</h3>
+			<h3 class="modal-title"><span class="fa fa-sign-in"></span> Login</h3>
 		</div>
 		<form ng-submit="login()">
 			<div class="modal-body">
