--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -503,7 +503,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<div class="input-group">
+						<div class="input-group {{!validating && !valid ? 'has-warning' : ''}}">
 							<div class="input-group-addon">
 								<span class="glyphicon glyphicon-tag"/>
 							</div>
@@ -511,8 +511,15 @@
 									ng-model="vm.name"
 									class="form-control"
 									placeholder="vm name"
+									ng-change="checkVMName()"
 									uib-tooltip="Virtual Machine name"
 									autofocus>
+							<div class="input-group-addon">
+								<span ng-if="validating" class="fa fa-refresh fa-spin"></span>
+								<span ng-if="!validating && !valid" class="fa fa-thumbs-down"></span>
+								<span ng-if="!validating && valid" class="fa fa-thumbs-up"></span>
+							</div>
+
 						</div>
 					</div>
 					<div class="form-group">
