--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -143,10 +143,10 @@
 					</div>
 
 					<div class="form-group">
-						<div class="input-group">
+						<div class="input-group {{!validating && !valid ? 'has-warning' : ''}}">
 							<div class="input-group-addon"><span class="glyphicon glyphicon-tag"/></div>
 							<input ng-model="disk.name" class="form-control" uib-tooltip="Virtual disk name"
-							       ng-change="nameChanged()">
+							       ng-change="nameChanged(); checkVDiskName()">
 							<div class="input-group-btn">
 								<button type="button"
 								        ng-click="disk.readOnly = !disk.readOnly"
