--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -881,7 +881,7 @@
 	<div class="modal-body">
 	<div ng-if="errors.length > 0" ng-repeat="error in errors">
 		<div class="alert alert-danger" role="alert">
-			<span class="glyphicon glyphicon-ban-circle"></span> {{error.message}} [{{error.code}}]
+			<span class="glyphicon glyphicon-ban-circle"></span> <strong>[{{error.code}}]</strong> {{error.message}}
 		</div>
 	</div>
 	<div class="input-group">
