added nr of online hosts to basic report
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -238,7 +238,7 @@
 					</div>
 					<div class="panel-body">
 						<ul>
-							<li>hosts: {{basicBalanceReport.totalHosts}}</li>
+							<li>hosts: {{basicBalanceReport.totalHosts}} ({{basicBalanceReport.hostsOnline}} online)</li>
 							<li>vms: {{basicBalanceReport.totalVms}}</li>
 							<li>total host memory:
 								{{humanFriendlySize(basicBalanceReport.totalHostMemory)}}
