--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -884,7 +884,7 @@
 			<span class="glyphicon glyphicon-ban-circle"></span> <strong>[{{error.code}}]</strong> {{error.message}}
 		</div>
 	</div>
-	<div class="input-group">
+	<div class="input-group {{errors.length > 0 ? 'has-error' : ''}}">
 		<div class="input-group-addon">
 			<span class="glyphicon glyphicon-map-marker"></span>
 		</div>
@@ -892,7 +892,7 @@
 				ng-model="host.address"
 				class="form-control"
 				placeholder="address"
-				ng-blur="updatePubkey()"
+				ng-blur="checkHostAddress(); updatePubkey();"
 				autocomplete="off"
 				autofocus>
 		<div class="input-group-btn">
