fix: dpkg query format - tested with ubuntu-16 and debian-8
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -884,7 +884,7 @@
 			<span class="glyphicon glyphicon-ban-circle"></span> <strong>[{{error.code}}]</strong> {{error.message}}
 		</div>
 	</div>
-	<div class="input-group {{errors.length > 0 ? 'has-error' : ''}}">
+	<div class="input-group {{errors.length > 0 ? 'has-errors' : ''}}">
 		<div class="input-group-addon">
 			<span class="glyphicon glyphicon-map-marker"></span>
 		</div>
